// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`六种模式 > absent：稳度 0–3 的视图快照 1`] = `
[
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.4,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.6,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.8,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 1,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
]
`;

exports[`六种模式 > ahead：稳度 0–3 的视图快照 1`] = `
[
  {
    "followDx": 48,
    "followDy": -16.8,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.9,
    "followVisible": true,
    "place": "ahead",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.4,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 36,
    "followDy": -12.6,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.75,
    "followVisible": true,
    "place": "ahead",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.6,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 24,
    "followDy": -8.4,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.6,
    "followVisible": true,
    "place": "ahead",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.8,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 12,
    "followDy": -4.2,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.45,
    "followVisible": true,
    "place": "ahead",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 1,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
]
`;

exports[`六种模式 > behind：稳度 0–3 的视图快照 1`] = `
[
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.9,
    "followVisible": true,
    "place": "behind",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.4,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": -12.2,
    "followDy": 6.1,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.75,
    "followVisible": true,
    "place": "behind",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.6,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": -23.8,
    "followDy": 11.9,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.6,
    "followVisible": true,
    "place": "behind",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.8,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": -36,
    "followDy": 18,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.45,
    "followVisible": true,
    "place": "behind",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 1,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
]
`;

exports[`六种模式 > hidden：稳度 0–3 的视图快照 1`] = `
[
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.4,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.6,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.8,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0,
    "followVisible": false,
    "place": "none",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 1,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
]
`;

exports[`六种模式 > pressure：稳度 0–3 的视图快照 1`] = `
[
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.9,
    "followVisible": true,
    "place": "behind",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.4,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": -12.2,
    "followDy": 6.1,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.75,
    "followVisible": true,
    "place": "behind",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.6,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": -23.8,
    "followDy": 11.9,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.6,
    "followVisible": true,
    "place": "behind",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.8,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
]
`;

exports[`六种模式 > synced：稳度 0–3 的视图快照 1`] = `
[
  {
    "followDx": -27.4,
    "followDy": 13.7,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.9,
    "followVisible": true,
    "place": "overlap",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.4,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": -18,
    "followDy": 9,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.75,
    "followVisible": true,
    "place": "overlap",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.6,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": -8.6,
    "followDy": 4.3,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.6,
    "followVisible": true,
    "place": "overlap",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 0.8,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
  {
    "followDx": 0,
    "followDy": 0,
    "followKind": "hollow",
    "followLit": [
      false,
      false,
      false,
    ],
    "followOpacity": 0.45,
    "followVisible": true,
    "place": "overlap",
    "selfDx": 0,
    "selfDy": 0,
    "selfLit": [
      false,
      false,
      false,
    ],
    "selfOpacity": 1,
    "selfTremble": false,
    "selfVisible": true,
    "selfWhite": false,
  },
]
`;
